--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -214,7 +214,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_walk"
-            layoutWalkVisibility="@{vm.myFootprintMarker.walkStatus}"
+            layoutWalkVisibility="@{vm.myWalkStatus.walkStatus}"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginHorizontal="12dp"
@@ -243,7 +243,7 @@
             <TextView
                 android:id="@+id/tv_woof_walk_status"
                 style="@style/Theme.AppCompat.TextView.SemiBold.Coral400.Size20"
-                myWalkStatus="@{vm.myFootprintMarker.walkStatus}"
+                myWalkStatus="@{vm.myWalkStatus.walkStatus}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawablePadding="10dp"
@@ -270,7 +270,7 @@
 
         <ImageButton
             android:id="@+id/btn_woof_mark"
-            markBtnVisibility="@{vm.myFootprintMarker.walkStatus}"
+            markBtnVisibility="@{vm.myWalkStatus.walkStatus}"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginEnd="12dp"
