feat: 모집 수정 기능 구현

--- a/android/app/src/main/res/layout/activity_club_modify.xml
+++ b/android/app/src/main/res/layout/activity_club_modify.xml
@@ -53,7 +53,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{vm.clubState.clubStateName}"
+                        app:clubStateText="@{vm.clubState}"
                         app:selectModifyStateTypeStyle="@{vm.clubState}"
                         tools:style="@style/Theme.AppCompat.TextView.SemiBold.White.Size16"
                         tools:text="모집중" />
