--- a/android/app/src/main/res/layout/item_club.xml
+++ b/android/app/src/main/res/layout/item_club.xml
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
-                android:text="@{club.clubState.clubStateName}"
+                app:clubStateText="@{club.clubState}"
                 style="@style/Theme.AppCompat.TextView.SemiBold.Orange.Size14"
                 app:clubStateTextStyle="@{club.clubState}"
                 app:layout_constraintStart_toStartOf="parent"
